# aws-immersion-day-cortex-code

./: AGENTS.md  README.md  pyproject.toml
cfn/: workshop-template.yaml
dags/: ecommerce_pipeline.py
data/seed/: raw_customers.parquet  raw_order_items.parquet  raw_orders.parquet  raw_products.parquet
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/marts/: dim_customers.sql  fct_orders.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql
dbt_project/tests/: assert_order_total_positive.sql
labs/: 00-prework.md  01-explore-and-setup.md  02-fix-the-pipeline.md  03-deploy-and-orchestrate.md  03-from-pipeline-to-product.md  04-deploy-and-orchestrate.md  04-quicksight-refresh.md  05-instructor-validation-runbook.md
scripts/: bootstrap-ec2.sh  bounty_hunt_answers.md  generate_seed_data.py  load-seed-data.sh  snowflake-setup.sql
