[project]
dependencies = ["google-api-python-client>=2.194.0,<3", "google-auth>=2.49.2,<3", "google-auth-oauthlib>=1.3.1,<2"]
name = "aws-immersion-day-cortex-code"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
aws_immersion_day_cortex_code = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
